--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="/Calculator/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 
 <body>
@@ -73,7 +73,7 @@
 
         </div>
     </div>
-    <script src="/Calculator/scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
