--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="shortcut icon" href="/assets/calculator.png" type="image/x-icon">
 </head>
 
 <body>
